# dwag

./: CHANGELOG.md  Cargo.toml  README.md  dragger.sln  dwag.sln
.github/workflows/: release.yml
assets/: preview.avif
dragger/: ArgParser.cs  DragItem.cs  DrageSourceForm.Designer.cs  DrageSourceForm.cs  FolderIcon.cs  Program.cs
dragger/Properties/: launchSettings.json
dwag/: ArgParser.cs  DragItem.cs  DrageSourceForm.Designer.cs  DrageSourceForm.cs  FolderIcon.cs  NativeMethods.txt  Program.cs  Theme.cs  dwag.csproj  release.ps1
dwag/Properties/: launchSettings.json
src/: args.rs  drag_drop.rs  main.rs  theme.rs
test/: test-loooooooong.txt
