[package]
name = 'dwag'
version = '0.1.0'
edition = '2024'

[dependencies]
windows = { version = '0.62.2', features = [
  'Win32_Foundation',
  'Win32_Graphics_Dwm',
  'Win32_Graphics_Gdi',
  'Win32_System_Com',
  'Win32_System_Com_StructuredStorage',
  'Win32_System_LibraryLoader',
  'Win32_System_Memory',
  'Win32_System_Ole',
  'Win32_System_Registry',
  'Win32_System_SystemServices',
  'Win32_UI_Controls',
  'Win32_UI_Input_KeyboardAndMouse',
  'Win32_UI_Shell',
  'Win32_UI_WindowsAndMessaging',
  'Win32_Storage_FileSystem',
] }
windows-core = '0.62.2'

[profile.release]
opt-level = 's'
strip = true
lto = true
panic = 'abort'
codegen-units = 1
